# mimir

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_CONTEXT.md  README.md  pyproject.toml
.github/: copilot-instructions.md
hooks/: mimir_precompact_hook.sh  mimir_save_hook.sh
src/mimir/: __init__.py  models.py  server.py  store.py
tests/: test_store.py
