[project]
name = "mimir"
version = "0.1.0"
description = "Local LLM Memory Store - MCP server for persistent memory and RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mimir = "mimir.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimir"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
